template now works for both Bachelor's and Master's theses

--- a/references.bib
+++ b/references.bib
@@ -31,7 +31,7 @@
   title = {Interview on functional requirements for permanent diaphragm walls},
   author = {Peter Harryson},
   organization = {Trafikverket},
-  month = {March},
+  month = {3},
   year = {2014},
 }
 
