added entry for unpublished references

--- a/references.bib
+++ b/references.bib
@@ -20,6 +20,14 @@
   year = {2013},
 }
 
+@unpublished{LectureA,
+	Author = {Ridcully, Mustrum},
+	Institution = {Unseen University},
+	Howpublished = {University Lecture},
+	Year = {2000},
+	Title = {An Introduction to Crossbow Hunting}
+}
+
 @STANDARD{1990,
   title = {Eurocode - Basis of structural design},
   organization = {EUROPEAN COMMITTEE FOR STANDARDIZATION},
