Updates from ShareLaTeX

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,5 +1,5 @@
-\documentclass[masters]{undergraduate-thesis}
-%\documentclass[bachelors]{undergraduate-thesis} % use this line if you are writing a bachelor's thesis
+%\documentclass[masters]{undergraduate-thesis}
+\documentclass[bachelors]{undergraduate-thesis} % use this line if you are writing a bachelor's thesis
 
 %% Packages. All ducumentation is on the web, google for package name + latex
 \usepackage{subfiles}
