--- a/thesis.tex
+++ b/thesis.tex
@@ -91,15 +91,15 @@ Here goes the text for the Preface.
 }
 
 % secondary language
-% You only need to use this if you (1) are writing a bachelor thesis in Swedich which should have an English abcstract, or (2) if you are writing a Master's thesis and want to include a Swedich abstract (which is optional).
+% You only need to use this if you (1) are writing a bachelor thesis in Swedish which should have an English abcstract, or (2) if you are writing a Master's thesis and want to include a Swedish abstract (which is optional).
 \secondarylanguage{english}
 \thesisinsecondlang{Building and Civil Engineering}
-\titlesecondlang{Some Title second language}
-\subtitlesecondlang{some subtitle second language} % Optional
-\keywordssecondlang{keywords in, second, language}
-\departmentsecondlang{Department's name in second language}
-\divisionsecondlang{Division's name in second language} % Optional
-\researchgroupsecondlang{Research group's name second language} % Optional
+\titlesecondlang{Some Title secondary language}
+\subtitlesecondlang{some subtitle secondary language} % Optional
+\keywordssecondlang{keywords in, secondary, language}
+\departmentsecondlang{Department's name in secondary language}
+\divisionsecondlang{Division's name in secondary language} % Optional
+\researchgroupsecondlang{Research group's name secondary language} % Optional
 \abstractsecondlang{%
 	This is the abstract text in the secondary language
 }
