--- a/thesis.tex
+++ b/thesis.tex
@@ -114,10 +114,11 @@ Here goes the text for the Preface.
 \input{chapters/graphics}
 
 % references
-\newpage
+\cleardoublepage
 \printbibliography[heading=bibintoc]
 
 % appendicies
+\cleardoublepage
 \input{chapters/appendix}
 \end{document}
 
