--- a/thesis.tex
+++ b/thesis.tex
@@ -1,5 +1,5 @@
-\documentclass[masters]{undergraduate-thesis}
-%\documentclass[bachelors]{undergraduate-thesis} % use this line if you are writing a bachelor's thesis
+%\documentclass[masters]{undergraduate-thesis}
+\documentclass[bachelors]{undergraduate-thesis} % use this line if you are writing a bachelor's thesis
 
 %% Packages. All ducumentation is on the web, google for package name + latex
 \usepackage{subfiles}
@@ -91,7 +91,7 @@ Here goes the text for the Preface.
 }
 
 % secondary language
-% You only need to use this if you (1) are writing a bachelor thesis in Swedish which should have an English abcstract, or (2) if you are writing a Master's thesis and want to include a Swedish abstract (which is optional).
+% You only need to use this if you (1) are writing a bachelor thesis in Swedish which should have an English abstract, or (2) if you are writing a Master's thesis and want to include a Swedish abstract (which is optional).
 \secondarylanguage{english}
 \thesisinsecondlang{Building and Civil Engineering}
 \titlesecondlang{Some Title secondary language}
