added support for list of figures and tables

--- a/undergraduate-thesis.cls
+++ b/undergraduate-thesis.cls
@@ -498,6 +498,9 @@
 
  \cleardoublepage
  \tableofcontents
+ \clearpage
+ \listoffigures
+ \listoftables
  
  % Preface and acknowledgements
  \@ifundefined{@preface}{}{
