example tables added

--- a/thesis.tex
+++ b/thesis.tex
@@ -19,6 +19,7 @@
 \usepackage{pgfplots}
 \usepackage{subfig}
 \usepackage{float}
+\usepackage{booktabs}
 \usepackage[capitalise,noabbrev]{cleveref}
 \usepackage{pdfpages}
 \usepackage[detect-all]{siunitx}
