new department name and report numbering

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,5 +1,5 @@
-%\documentclass[masters]{undergraduate-thesis}
-\documentclass[bachelors]{undergraduate-thesis} % use this line if you are writing a bachelor's thesis
+\documentclass[masters]{undergraduate-thesis}
+%\documentclass[bachelors]{undergraduate-thesis} % use this line if you are writing a bachelor's thesis
 
 %% Packages. All ducumentation is on the web, google for package name + latex
 \usepackage{subfiles}
@@ -64,12 +64,12 @@
 \title{Some Title}
 \subtitle{some subtitle} % Optional
 \author{Gudjón Ólafur Gudjónsson \and Jón Grétar Höskuldsson} 
-\thesisin{Civilingenjörsprogrammet}
-\department{Department of Civil and Environmental Engineering}
+\thesisin{Structural Engineering and Building Technology}
+\department{Department of Architecture and Civil Engineering}
 \division{Division of Structural Engineering}
 \researchgroup{Concrete Structures}
-\reportno{201X:XX} % contact your examiner for report number
-\copyrightyear{201X}
+\reportno{BOMX02-YY-XX} % YY=year (e.g. for 2017, YY=17). XX report number, which you get from your examiner
+\copyrightyear{20YY}
 \keywords{Permanent Diaphragm Walls, Diaphragm Walls, Functional Requirements}
 
 
