new report number and minor change of footer on front page

--- a/thesis.tex
+++ b/thesis.tex
@@ -68,7 +68,7 @@
 \department{Department of Architecture and Civil Engineering}
 \division{Division of Structural Engineering}
 \researchgroup{Concrete Structures}
-\reportno{BOMX02-YY-XX} % YY=year (e.g. for 2017, YY=17). XX report number, which you get from your examiner
+\reportno{ACEX30-YY-XX} % YY=year (e.g. for 2017, YY=17). XX=report number, which you get from your examiner.
 \copyrightyear{20YY}
 \keywords{Permanent Diaphragm Walls, Diaphragm Walls, Functional Requirements}
 
